--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/JSUnitTests.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/JSUnitTests.cshtml
@@ -1,10 +1,34 @@
-﻿<link href="~/JSUnitTests/Jasmine-2.1.3/jasmine.css" rel="stylesheet" />
-<script src="~/JSUnitTests/Jasmine-2.1.3/jasmine.js"></script>
-<script src="~/JSUnitTests/Jasmine-2.1.3/jasmine-html.js"></script>
-<script src="~/JSUnitTests/Jasmine-2.1.3/boot.js"></script>
+﻿@Scripts.Render( "~/bundles/jquery" )
+@Scripts.Render( "~/bundles/jqueryval" )
+@Scripts.Render( "~/bundles/jqueryui" )
+@Scripts.Render( "~/bundles/modernizr" )
+@Scripts.Render( "~/bundles/knockout" )
+
+<script src="~/Scripts/Lib/raphael-min.js"></script>
+<script src="~/Scripts/Lib/SpinJS/spin.min.js"></script>
+<script src="~/Scripts/KnockoutCustomBindings/KOCustomBindings.js"></script>
+<script src="~/Scripts/CalendarWidget/calendarWidget.js"></script>
+<script src="~/Scripts/CalendarWidget/Slider/jquery.animate-enhanced.min.js"></script>
+<script src="~/Scripts/CalendarWidget/Slider/jquery.easing.1.3.js"></script>
+<script src="~/Scripts/CalendarWidget/Slider/jquery.superslides.min.js"></script>
+
+<script src="~/Scripts/JSModels/KKEventModel.js"></script>
+<script src="~/Scripts/JSModels/KKEventModelObservable.js"></script>
+<script src="~/Scripts/JSModels/KKDateModel.js"></script>
+<script src="~/Scripts/JSModels/KKEventDateModel.js"></script>
+
+<script src="~/Scripts/JSViewModels/CalendarViewModel.js"></script>
+<script src="~/Scripts/Helpers/EventColorHelper.js"></script>
+<script src="~/Scripts/Helpers/EventTreeBuilder.js"></script>
+<script src="~/Scripts/Helpers/EventFactory.js"></script>
+
+<link href="~/Scripts/JSUnitTests/Jasmine-2.1.3/jasmine.css" rel="stylesheet" />
+<script src="~/Scripts/JSUnitTests/Jasmine-2.1.3/jasmine.js"></script>
+<script src="~/Scripts/JSUnitTests/Jasmine-2.1.3/jasmine-html.js"></script>
+<script src="~/Scripts/JSUnitTests/Jasmine-2.1.3/boot.js"></script>
 
 <!-- include spec files here... -->
-<script src="~/JSUnitTests/Jasmine-2.1.3/spec/EventTreeBuilderSpec.js"></script>
+<script src="~/Scripts/JSUnitTests/Jasmine-2.1.3/spec/EventTreeBuilderSpec.js"></script>
 
 
 
