updated layout, menu-item looks better

--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -109,7 +109,7 @@
 
 <section id="calendarDayDetailsContainer">
 	<div id="calendarDayDetailsTable">
-		<div style="font-size: 3em; padding: 20px;">
+		<div style="font-size: 3em;">
 			<span>
 				<span style="font-size: .6em; margin-left: 6px; color: rgb(171, 157, 138);">grafik z dnia: </span>
 				<span data-bind="text: $root.detailsPageDisplayDate.day()" style="color: rgb(148, 147, 123);"></span>
