--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -106,8 +106,8 @@ body header {
 	height: 200px;
 	position: relative;
 	width: 200px;
-	margin-top: -70px;
-	right: 50px;
+	margin-top: -150px;
+	right: 15px;
 }
 
 #digitalClock {
@@ -115,7 +115,7 @@ body header {
 	top: 160px;
 	width: 200px;
 	text-align: center;
-	font-size: 2em;
+	font-size: 40px;
 	color: rgb(207, 199, 173);
 }
 
@@ -128,8 +128,9 @@ body header {
 }
 
 .events-menu-container {
-	text-align: center;
-	margin-top: -11px;
+	/*text-align: center;*/
+	/*background: rgb(178, 169, 153);*/
+	padding-left:300px;
 }
 
 #lobbyLogo {
@@ -306,20 +307,19 @@ body header {
 
 
 #detailsMenuHeader {
-	width: 90%;
 	position: relative;
 	top: 20px;
+	margin-bottom: 20px;
 }
 
 .dark-background-div {
 	background: rgba(0,0,0,.04);
 	border-bottom: 1px solid rgb(247, 247, 247);
-	border-top: 1px solid #D8D8D8;
+	border-top: 1px solid #CAC8C8;
 	font-size: 2em;
 	width: 100%;
 	color: white;
 	padding-top: 10px;
-	padding-left: 6px;
 }
 
 .site-menu-header {
@@ -582,22 +582,22 @@ body header {
 	width: 16px;
 	height: 14px;
 	background-image: url(../Images/Icons/arrow_up.png);
-	position:absolute !important;
-	right:4px !important;
-	top:8px !important;
-	margin-bottom:4px;
+	position: absolute !important;
+	right: 4px !important;
+	top: 8px !important;
+	margin-bottom: 4px;
 	background-repeat: no-repeat;
 }
 
 .calendar-year-arrows-container {
-display:inline-block;
+	display: inline-block;
 }
 
 #calendarHeaderYearArrowDown {
 	width: 16px;
 	height: 14px;
 	background-image: url(../Images/Icons/arrow_down.png);
-	position:absolute !important;
+	position: absolute !important;
 	right: 4px !important;
 	bottom: 0px !important;
 	background-repeat: no-repeat;
@@ -609,6 +609,7 @@ display:inline-block;
 	position: relative;
 	top: 0px;
 	background: rgb(223, 215, 188);
+	/*background:rgb(239, 232, 208);*/
 }
 
 .menu-item-number-container {
@@ -623,7 +624,10 @@ display:inline-block;
 .menu-item-number-upcoming {
 	background: rgb(223, 215, 188);
 	color: rgb(173, 165, 137);
+	box-shadow: 1px 1px 1px 0px rgb(186, 184, 174);
+	border-top: 1px solid rgb(250, 249, 230);
 	/*border-top: 1px solid rgb(248, 247, 233);*/
+	text-align:center;
 }
 
 .triangle-header {
@@ -648,10 +652,11 @@ display:inline-block;
 }
 
 #detailsPageAllEventsListContainer {
-	margin: 20px auto;
+	margin-top: 50px;
 	font-size: 1.2em;
 	width: 700px;
-	padding-left: 200px;
+	margin-left: 300px;
+	background:rgb(218, 213, 199);
 }
 
 #lobbyPageAllEventsListContainer {
@@ -973,9 +978,7 @@ background:rgb(115, 233, 162);
 	padding-right: 30px;
 	font-size: 18px;
 	box-shadow: 0px 5px 20px -5px rgb(151, 151, 151);
-	position:relative;
-	
-	
+	position: relative;
 }
 
 #showRegisterFormBtn {
@@ -1067,7 +1070,7 @@ background:rgb(115, 233, 162);
 }
 
 #todayDateDay {
-	font-size: 6em;
+	font-size: 70px;
 	display: inline-block;
 	color: white;
 	padding-left: 5px;
@@ -1075,25 +1078,25 @@ background:rgb(115, 233, 162);
 
 #todayDateDayName {
 	color: white;
-	font-size: 2em;
+	font-size: 20px;
 	position: relative;
-	bottom: 35px;
-	padding-left: 7px;
+	bottom: 116px;
+	padding-left: 90px;
 }
 
 #todayDateMonth {
-	font-size: 2em;
+	font-size: 30px;
 	position: relative;
-	top: -40px;
-	padding-left: 7px;
+	bottom: 125px;
+	padding-left: 88px;
 }
 
 #todayDateYear {
 	font-size: 1.5em;
 	position: relative;
-	top: -40px;
+	bottom: 134px;
 	text-align: left;
-	padding-left: 7px;
+	padding-left: 88px;
 }
 
 #todayDateAndTimeContainer {
@@ -1216,6 +1219,7 @@ wydarzenia-tab {
 	margin-left: 2px;
 	padding: 0px 1%;
 	padding-bottom: 20px;
+	border-top:1px solid rgb(197, 192, 174);
 }
 
 	#calendarDayDetailsTable .table-details-head {
