--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsAllSelectedEventsList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsAllSelectedEventsList.cshtml
@@ -1,20 +1,15 @@
 ﻿<div id="detailsPageAllEventsListContainer" style="display: none;">
-	<div style="margin-bottom: 16px; background: rgb(218, 213, 199); padding: 5px; color: rgb(158, 143, 123); border-bottom: 1px solid rgb(255, 255, 255); font-size: 1.4em;">
+	<div style="padding: 5px; color: rgb(150, 141, 109); border-bottom:1px solid rgb(242, 242, 242); font-size: 1.4em;">
 		Mój kalendarz:
 	</div>
-	<div data-bind="foreach: $root.detailsPageAllSelectedEvents" style="position: relative; left: 1px;">
-	@*	<div data-bind="if: startDate.javaScriptStartDate <= $root.todayDate.javaScriptStartDate">
-			<div style="display: inline-block; width: 300px; margin-bottom: 2px; padding: 5px; vertical-align: top; background: rgb(209,209,209); color: white;" data-bind="	text: name"></div>
-			<div style="display: inline-block; padding: 5px; background: rgb(180,180,180);width:100px;" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
-			<div style="display: inline-block; color: white; padding: 5px; background: rgb(209,209,209);width:110px;" data-bind="text: startDate.displayFullDate()"></div>
-			<div style="display: inline-block; color: white; padding: 5px; background: rgb(209,209,209);width:110px;" data-bind="text: startDate.displayFullTime()"></div>
-		</div>*@
-
-		<div data-bind="if: startDate.javaScriptStartDate > $root.todayDate.javaScriptStartDate">
-			<div style="display: inline-block; width: 300px; margin-bottom: 2px; padding: 5px; vertical-align: top; background: rgb(173, 151, 151); color: white;" data-bind="text: name"></div>
-			<div style="display: inline-block; padding: 5px; background: rgb(130,130,130);width:100px;" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
-			<div style="display: inline-block; color: white; padding: 5px; background: rgb(173, 151, 151);width:110px;" data-bind="text: startDate.displayFullDate()"></div>
-			<div style="display: inline-block; color: white; padding: 5px; background: rgb(173, 151, 151);width:110px;" data-bind="text: startDate.displayFullTime()"></div>
+	<div data-bind="foreach: $root.detailsPageAllSelectedEvents" style="position: relative; padding:60px 0px; left: 1px;text-align:center;">
+		<!-- ko if: startDate.javaScriptStartDate > $root.todayDate.javaScriptStartDate -->
+		<div>
+			<div style="display: inline-block; width: 300px; margin-bottom: 2px; padding: 5px;text-align:left; vertical-align: top; color: rgb(118, 104, 75);" data-bind="text: name"></div>
+			<div style="display: inline-block; color: rgb(118, 104, 75); padding: 5px;  width: 110px;" data-bind="text: startDate.displayFullDate()"></div>
+			<div style="display: inline-block; color: rgb(118, 104, 75); padding: 5px;  width: 110px;" data-bind="text: startDate.displayFullTime()"></div>
+			<div style="display: inline-block; padding: 5px; background: rgb(184, 168, 137); width: 100px; box-shadow: rgb(143, 125, 107) 2px 2px 10px -1px inset;" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
 		</div>
+		<!-- /ko -->
 	</div>
 </div>
