--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -7,7 +7,7 @@
 </div>
 <section id="detailsPanel">
 	<div id="todayDateAndTimeContainer">
-		<div>
+		<div style="position:relative;z-index:-1;">
 			<div id="todayDateDay" data-bind="text: $root.todayDate.day"></div>
 			<div id="todayDateDayName" data-bind="text: $root.todayDate.getDayName()"></div>
 			<div id="todayDateMonth" data-bind="text: $root.todayDate.getMonthName()"></div>
