--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsAllSelectedEventsList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsAllSelectedEventsList.cshtml
@@ -1,15 +1,49 @@
-﻿<div id="detailsPageAllEventsListContainer" style="display: none;">
-	<div style="padding: 5px; color: rgb(150, 141, 109); border-bottom:1px solid rgb(242, 242, 242); font-size: 1.4em;">
-		Mój kalendarz:
+﻿<div id="detailsPageAllEventsListContainer">
+	<div style="padding: 5px; padding-left: 20px; color: rgb(231, 224, 202); border-bottom: 1px solid rgb(242, 242, 242); font-size: 1.4em; background: rgb(186, 176, 146); border-top-left-radius: 6px; border-top-right-radius: 6px;">
+		Mój kalendarz
 	</div>
-	<div data-bind="foreach: $root.detailsPageAllSelectedEvents" style="position: relative; padding:60px 0px; left: 1px;text-align:center;">
-		<!-- ko if: startDate.javaScriptStartDate > $root.todayDate.javaScriptStartDate -->
-		<div>
-			<div style="display: inline-block; width: 300px; margin-bottom: 2px; padding: 5px;text-align:left; vertical-align: top; color: rgb(118, 104, 75);" data-bind="text: name"></div>
-			<div style="display: inline-block; color: rgb(118, 104, 75); padding: 5px;  width: 110px;" data-bind="text: startDate.displayFullDate()"></div>
-			<div style="display: inline-block; color: rgb(118, 104, 75); padding: 5px;  width: 110px;" data-bind="text: startDate.displayFullTime()"></div>
-			<div style="display: inline-block; padding: 5px; background: rgb(184, 168, 137); width: 100px; box-shadow: rgb(143, 125, 107) 2px 2px 10px -1px inset;" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
+
+	<div style="padding: 20px;">
+		<div class="selected-events-checkbox-container hover-cursor-pointer" id="showOldEventsCheckboxContainer" style="color: rgb(255, 249, 228); width: 240px;" data-bind="click: function () { $root.toggleShowOldEventsOnCheckboxClick( $element ) }">
+			<div id="showOldEventsCheckbox" style="vertical-align:bottom; border: 2px solid rgb(255, 250, 232); height: 22px; width: 22px; text-align: center; padding: 4px; border-radius: 4px; display: inline-block;">✓</div>
+			<span style="padding: 4px;">Pokaż stare wydarzenia</span>
+		</div>
+	</div>
+
+	<div style="text-align: center; padding-top: 20px; font-weight: bold; color: rgb(118, 104, 75); margin: 0 auto; width: 90%; border-bottom: 1px solid rgb(242, 233, 216);">
+		<div style="display: inline-block; width: 300px; margin-bottom: 2px; padding: 5px; vertical-align: top; text-align: left;">Tytuł:</div>
+		<div style="display: inline-block; padding: 5px; width: 110px; text-align: left;">Data:</div>
+		<div style="display: inline-block; padding: 5px; width: 110px; text-align: left;">Godzina:</div>
+		<div style="display: inline-block; padding: 5px; width: 100px; text-align: left;">Rodzaj:</div>
+	</div>
+
+	<div data-bind="foreach: $root.detailsPageSelectedEvents.old" style="text-align: center;">
+		<!-- ko if: $index() == 0 -->
+		<div style="color: rgb(255, 249, 228);padding:10px 0;">
+			/stare/
 		</div>
 		<!-- /ko -->
+
+		<div class="selected-event-info-div">
+			<div style="display: inline-block; width: 300px; margin-bottom: 2px; padding: 5px; vertical-align: top; color: rgb(118, 104, 75); text-align: left;" data-bind="text: name"></div>
+			<div style="display: inline-block; color: rgb(118, 104, 75); padding: 5px; width: 110px; text-align: left;" data-bind="text: startDate.displayFullDate()"></div>
+			<div style="display: inline-block; color: rgb(118, 104, 75); padding: 5px; width: 110px; text-align: left;" data-bind="text: startDate.displayFullTime()"></div>
+			<div style="display: inline-block; padding: 5px; background: rgb(184, 168, 137); width: 100px; box-shadow: rgb(143, 125, 107) 2px 2px 10px -1px inset;" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
+		</div>
+	</div>
+
+	<div data-bind="foreach: $root.detailsPageSelectedEvents.upcoming" style="text-align: center;">
+		<!-- ko if: $index() == 0 -->
+		<div style="color: rgb(255, 249, 228);padding:10px 0;">
+			/nadchodzące/
+		</div>
+		<!-- /ko -->
+
+		<div class="selected-event-info-div">
+			<div style="display: inline-block; width: 300px; margin-bottom: 2px; padding: 5px; vertical-align: top; color: rgb(118, 104, 75); text-align: left;" data-bind="text: name"></div>
+			<div style="display: inline-block; color: rgb(118, 104, 75); padding: 5px; width: 110px; text-align: left;" data-bind="text: startDate.displayFullDate()"></div>
+			<div style="display: inline-block; color: rgb(118, 104, 75); padding: 5px; width: 110px; text-align: left;" data-bind="text: startDate.displayFullTime()"></div>
+			<div style="display: inline-block; padding: 5px; background: rgb(184, 168, 137); width: 100px; box-shadow: rgb(143, 125, 107) 2px 2px 10px -1px inset;" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
+		</div>
 	</div>
 </div>
