--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyAllSelectedEventsList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyAllSelectedEventsList.cshtml
@@ -2,7 +2,7 @@
 	<div class="title-header">
 		/Wybrane wydarzenia/
 	</div>
-	<div data-bind="foreach: $root.lobbyPageAllSelectedEvents" style="position: relative; left: 1px;">
+	<div data-bind="foreach: $root.lobbyPageSelectedEvents" style="position: relative; left: 1px;">
 		<div data-bind="if: startDate.javaScriptStartDate <= $root.todayDate.javaScriptStartDate">
 			<div style="display: inline-block; width: 300px; margin-bottom: 2px; padding: 5px; vertical-align: top; background: rgb(209,209,209); color: white;" data-bind="	text: name"></div>
 			<div style="display: inline-block; padding: 5px; background: rgb(180,180,180);" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
