fixed azure bug

--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -130,6 +130,8 @@ body header {
 	/*text-align: center;*/
 	/*background: rgb(178, 169, 153);*/
 	padding-left:300px;
+	height:100px;
+
 }
 
 #lobbyLogo {
