--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Login.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Login.cshtml
@@ -7,7 +7,7 @@
 	<div class="form-body">
 		@using (Html.BeginForm("Login", "Account", FormMethod.Post, new { id = "loginForm" }))
   {
-			@Html.AntiForgeryToken()
+			//@Html.AntiForgeryToken()
 
 			<fieldset>
 				<legend>Logowanie</legend>
