--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -22,7 +22,7 @@
 					<span class="loggedIn-nickname">@User.Identity.Name</span>
 					@using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
 	 {
-						@Html.AntiForgeryToken()
+						//@Html.AntiForgeryToken()
 						<a style="color: rgb(255, 109, 109);" href="javascript:document.getElementById('logoutForm').submit()">wyloguj</a>
 	 }
 				</div>
