--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model KalendarzKarieryData.Models.ViewModels.RegisterViewModel
 
 <div id="detailsMenuHeader" class="dark-background-div">
-	<span>
+	<span style="padding-left:20px;">
 		/Dziennik/
 	</span>
 </div>
