--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventSummary.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventSummary.cshtml
@@ -1,9 +1,9 @@
 ﻿<section id="detailsEventBlockList">
-	<div style="overflow: hidden; width: 98%; border-top: none; margin: 0 auto;" data-bind="foreach: detailsPageDayEvents()">
+	<div style="border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; text-align:center; padding-bottom:20px; background: rgb(228, 223, 205); border-left: 3px solid #D7D0B8; border-right: 2px solid #D7D0B8; border-bottom: 2px solid #D7D0B8; overflow: hidden;" data-bind="foreach: detailsPageDayEvents()">
 		<div class="event-block-container">
 		<span style="display:none;" class="hidden-event-id" data-bind="text: id"></span>
 			<div class="event-block hover-cursor-pointer" data-bind="click: function () { $root.showEventDetailsOnEventBlockClick( $element ) }">
-				<div data-bind="style: { color: kind.headerColor, background: 'rgb(184, 168, 137)', border: '1px solid rgb(223, 209, 192)', width: '50%', boxShadow:'inset 2px 2px 10px -1px rgb(143, 125, 107)', padding: '10px', marginBottom: '10px' }">
+				<div data-bind="style: { color: kind.headerColor, width: '50%', padding: '10px', marginBottom: '10px' }">
 					<span data-bind="text: kind.name"></span>
 				</div>
 				<div class="event-block-content">
